--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
+    "pusher-js": "^7.6.0",
     "vue": "^2.7.14",
     "vue-axios": "^3.5.2",
     "vue-router": "^3.5.1",
