--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.7.14",
     "vue-axios": "^3.5.2",
     "vue-router": "^3.5.1",
+    "vue-toast-notification": "^0.6.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
