--- a/client/package.json
+++ b/client/package.json
@@ -13,15 +13,17 @@
     "pusher-js": "^7.6.0",
     "vue": "^2.7.14",
     "vue-axios": "^3.5.2",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.5.1",
-    "vue-toast-notification": "^0.6.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "html-loader": "^4.2.0",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.75.0"
   },
   "browserslist": [
     "> 1%",
